--- a/README.Rmd
+++ b/README.Rmd
@@ -64,7 +64,7 @@ godunov <- get_play_igraph(corpus = "rus",
                            play = "pushkin-boris-godunov")
 ```
 
-This will create an object of S3 class `"play_igraph"` that is heritated from `"igraph"`. It means that you can work with it as an `"igraph"` object:
+This will create an object of S3 class `"play_igraph"` that inherits from `"igraph"`. It means that you can work with it as an `"igraph"` object:
 
 ```{r}
 library(igraph)
