fixed Readme page

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ The goal of rdracor is to provide an R interface for the [Drama Corpora Project 
 
 ``` r
 #install.packages("devtools") #if you don't have devtools installed
-devtools::install_github("Pozdniakov/rdracor")
+devtools::install_github("dracor-org/rdracor")
 ```
 
 ## General info on corpora
