--- a/README.Rmd
+++ b/README.Rmd
@@ -17,12 +17,10 @@ knitr::opts_chunk$set(
 # rdracor <img src="man/figures/logo.png" align="right" width="120" />
 
 <!-- badges: start -->
-[![Travis build status](https://travis-ci.org/dracor-org/rdracor.svg?branch=master)](https://travis-ci.org/dracor-org/rdracor)
-[![Codecov test coverage](https://codecov.io/gh/dracor-org/rdracor/branch/master/graph/badge.svg)](https://codecov.io/gh/dracor-org/rdracor?branch=master)
 <!-- badges: end -->
 
 **Authors:** Ivan Pozdniakov, Frank Fischer<br />
-**Licence:** [GPL-3](https://opensource.org/licenses/GPL-3.0)
+**License:** [GPL-3](https://opensource.org/licenses/GPL-3.0)
 
 The goal of **rdracor** is to provide an R interface for the [DraCor API](https://dracor.org/documentation/api) (DraCor: Drama Corpora Project). Website of the project: [dracor.org](https://dracor.org).
 
