update documentation, apply gp

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -1,21 +1,21 @@
 @inproceedings{wiedmer_nathalie_2020_4621778,
   author       = {Wiedmer, Nathalie and Pagel, Janis and Reiter, Nils},
-  title        = {Romeo, Freund des Mercutio: Semi-Automatische 
+  title        = {Romeo, Freund des Mercutio: Semi-Automatische
                    Extraktion von Beziehungen zwischen dramatischen
                    Figuren},
-  booktitle = {Konferenz Digital Humanities im deutschsprachigen Raum},
+  booktitle    = {Konferenz Digital Humanities im deutschsprachigen Raum},
   year         = {2020},
   publisher    = {Zenodo},
   month        = {feb},
-  doi          = {10.5281/zenodo.4621778},
+  doi          = {<10.5281/zenodo.4621778>},
   url          = {https://doi.org/10.5281/zenodo.4621778}
 }
 
 @inproceedings{fischer2019programmable,
-  title={Programmable corpora: Introducing DraCor, an infrastructure for the research on European drama},
-  author={Fischer, Frank and B{\"o}rner, Ingo and G{\"o}bel, Mathias and Hechtl, Angelika and Kittel, Christopher and Milling, Carsten and Trilcke, Peer},
-  booktitle = {Digital Humanities 2019: "Complexities" (DH2019)},
-  year={2019},
-    doi          = {10.5281/zenodo.4284002},
+  title        = {Programmable corpora: Introducing DraCor, an infrastructure for the research on European drama},
+  author       = {Fischer, Frank and B{\"o}rner, Ingo and G{\"o}bel, Mathias and Hechtl, Angelika and Kittel, Christopher and Milling, Carsten and Trilcke, Peer},
+  booktitle    = {Digital Humanities 2019: "Complexities" (DH2019)},
+  year         = {2019},
+  doi          = {<10.5281/zenodo.4284002>},
   url          = {https://doi.org/10.5281/zenodo.4284002}
 }
