--- a/README.Rmd
+++ b/README.Rmd
@@ -49,8 +49,8 @@ plot(corpora)
 ## Plays in the corpus
 
 ```{r}
-ru <- get_dracor(corpus = "rus")
-summary(ru)
+ger <- get_dracor(corpus = "ger")
+summary(ger)
 ```
 
 You can get all corpora at once:
@@ -60,56 +60,79 @@ all <- get_dracor()
 summary(all)
 ```
 
-## Play network
+## Play metadata
 
-You can extract a network (undirected weighted graph) for a specific play:
+With `get_play_metadata()` you can get miscellaneous data for a play:
 
 ```{r}
-godunov <- play_igraph(play = "pushkin-boris-godunov", corpus = "rus")
+get_play_metadata(play = "lessing-emilia-galotti", 
+                  corpus = "ger") #use full_metadata = FALSE for faster download 
 ```
 
-This will create an object of S3 class `"play_igraph"` that inherits from `"igraph"`. 
-It means that you can work with it as an `"igraph"` object:
+
+## Play network
+
+You can extract a co-occurence network (undirected weighted graph) for a 
+specific play:
+
+```{r}
+emilia <- get_net_coocur_igraph(play = "lessing-emilia-galotti", corpus = "ger")
+plot(emilia)
+```
+
+You can use the package `{igraph}` to work with this object as a graph:
 
 ```{r}
 library(igraph)
-edge_density(godunov)
-diameter(godunov, weights = NA)
-graph.cohesion(godunov)
+edge_density(emilia)
+graph.cohesion(emilia)
 ```
 
-You can plot the graph: `plot()` will use plot method for `igraph` objects with some adjusted parameters. For example, vertices are coloured based on the gender and shape is based on whether a character is a group:
+In addition, you can get a summary with network properties and gender 
+distribution:  
 
 ```{r}
-plot(godunov)
+summary(emilia)
 ```
 
-In addition, you can get a summary with network properties and gender distribution:  
+Similarly, you can use function `get_net_relations_igraph()` to build a network
+based on relationships data:
 
 ```{r}
-summary(godunov)
+nedorosl_relations <- get_net_relations_igraph(play = "fonvizin-nedorosl",
+                                               corpus = "rus")
+plot(nedorosl_relations)
+summary(nedorosl_relations)
 ```
 
-## Text of the play
+## Text of a play
 
 You can get text of a play in different forms:
 
-- as a raw TEI (optionally parsed with {xml2})
+- as a raw TEI (optionally parsed with `{xml2}`):
 
 ```{r}
-get_play_tei(play = "pushkin-boris-godunov", corpus = "rus")
+get_text_tei(play = "lessing-emilia-galotti", corpus = "ger")
 ```
 
 - as a character vector:
 
 ```{r}
-text_godunov <- get_play_spoken_text(play = "pushkin-boris-godunov", corpus = "rus")
+text_godunov <- get_text_chr_spoken(play = "lessing-emilia-galotti",
+                                     corpus = "ger")
 head(text_godunov)
 ```
 
 - as a data frame:
 
 ```{r}
-get_play_text_df(play = "pushkin-boris-godunov", corpus = "rus")
+get_text_df(play = "lessing-emilia-galotti", corpus = "ger")
 ```
+
+## Acknowledgments
+
+The development of this research software was supported by Computational 
+Literary Studies Infrastructure (CLS INFRA) through its Transnational Access 
+Fellowship programme. CLS INFRA has received funding from the European Union’s 
+Horizon 2020 research and innovation programme under grant agreement №101004984.
 
