--- a/README.Rmd
+++ b/README.Rmd
@@ -136,3 +136,6 @@ Literary Studies Infrastructure (CLS INFRA) through its Transnational Access
 Fellowship programme. CLS INFRA has received funding from the European Union’s 
 Horizon 2020 research and innovation programme under grant agreement №101004984.
 
+<img src="man/figures/CLS INFRA_Stacked Long Logo Rev Col.png" align="left" width="360" />
+
+<img src="man/figures/Flag_of_Europe.png" align="left" width="360" />
