--- a/README.Rmd
+++ b/README.Rmd
@@ -66,7 +66,8 @@ With `get_play_metadata()` you can get miscellaneous data for a play:
 
 ```{r}
 get_play_metadata(play = "lessing-emilia-galotti", 
-                  corpus = "ger") #use full_metadata = FALSE for faster download 
+                  corpus = "ger",
+                  full_metadata = FALSE) #use full_metadata = FALSE for faster download 
 ```
 
 
