--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -7,7 +7,7 @@
   year         = {2020},
   publisher    = {Zenodo},
   month        = {feb},
-  doi          = {<10.5281/zenodo.4621778>},
+  doi          = {10.5281/zenodo.4621778},
   url          = {https://doi.org/10.5281/zenodo.4621778}
 }
 
@@ -16,6 +16,6 @@
   author       = {Fischer, Frank and B{\"o}rner, Ingo and G{\"o}bel, Mathias and Hechtl, Angelika and Kittel, Christopher and Milling, Carsten and Trilcke, Peer},
   booktitle    = {Digital Humanities 2019: "Complexities" (DH2019)},
   year         = {2019},
-  doi          = {<10.5281/zenodo.4284002>},
+  doi          = {10.5281/zenodo.4284002},
   url          = {https://doi.org/10.5281/zenodo.4284002}
 }
