--- a/README.Rmd
+++ b/README.Rmd
@@ -138,6 +138,22 @@ head(text_godunov)
 get_text_df(play = "lessing-emilia-galotti", corpus = "ger")
 ```
 
+## Changing DraCor API
+
+If you want to use another version of DraCor API (e.g. staging or locally saved on your computer), you can use function `set_dracor_api_url()`:
+
+```{r}
+set_dracor_api_url("https://staging.dracor.org/api")
+get_dracor("u")
+```
+
+Information on the working API can be retrieved by `dracor_api_info()`:
+
+```{r}
+dracor_api_info()
+```
+
+
 ## Acknowledgments
 
 The development of this research software was supported by Computational 
