--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 **Authors:** Ivan Pozdniakov, Frank Fischer<br />
-**License:** [GPL-3](https://opensource.org/license/gpl-3-0/)
+**License:** GPL-3
 
 The goal of **rdracor** is to provide an R interface for the [DraCor API](https://dracor.org/documentation/api) (DraCor: Drama Corpora Project). Website of the project: [dracor.org](https://dracor.org).
 
